ddd for sample api