@@ -19,23 +19,32 @@
     </parent>
 
     <properties>
-<!--        <spring-boot.run.jvmArguments>-Duser.timezone=UTC</spring-boot.run.jvmArguments>-->
-        <java.version>18</java.version>
+        <java.version>20</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- <org.springframework.boot.mail>2.7.5</org.springframework.boot.mail>-->
-        <com.accelhack.accelparts.core.version>2.0.0</com.accelhack.accelparts.core.version>
+        <!--<com.accelhack.accelparts.core.version>2.0.0</com.accelhack.accelparts.core.version>-->
         <org.mybatis.spring.boot.version>3.0.5</org.mybatis.spring.boot.version>
         <org.mybatis.dynamic-sql.version>1.3.0</org.mybatis.dynamic-sql.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.accelhack.accelparts</groupId>
-            <artifactId>http</artifactId>
-            <version>${com.accelhack.accelparts.core.version}</version>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
         </dependency>
+        <dependency>
+            <groupId>com.accelhack.accelparts</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.accelhack.accelparts</groupId>-->
+        <!--            <artifactId>http</artifactId>-->
+        <!--            <version>${com.accelhack.accelparts.core.version}</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -177,8 +186,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>20</source>
+                    <target>20</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
